# iris-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: README.md
code/src/iris_analysis/: __init__.py  data.py  generate_histograms.py  plotting.py
src/iris_analysis/: generate_histograms.py
