[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-analysis"
version = "0.1.0"
description = "Histogram plotting utilities for the Iris dataset"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "perezrosasn"}]
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/perezrosasn/iris-analysis"

[project.scripts]
iris-histograms = "iris_analysis.generate_histograms:main"
